@@ -1,3 +1,8 @@
+2006-03-09  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* xwininfo.c: 
+	Clear two tiny memory leaks.  (Coverity ids #900 & 901)
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
